--- a/index.html
+++ b/index.html
@@ -7,16 +7,63 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        @keyframes float {
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
+        }
+
+        .float-animation {
+            animation: float 3s ease-in-out infinite;
+        }
+
         .highlight {
-            background: linear-gradient(120deg, #b794f4 0%, #9f7aea 100%);
+            background: linear-gradient(120deg, #00c6ff 0%, #0072ff 100%);
             background-size: 200% 100%;
             color: white;
-            animation: gradient 1s ease infinite;
+            animation: gradientMove 2s ease infinite;
             border-radius: 4px;
             padding: 0 4px;
         }
 
-        @keyframes gradient {
+        .highlight-overlay {
+            color: white !important;
+            font-size: inherit !important;
+            line-height: inherit !important;
+            padding: inherit !important;
+            white-space: pre-wrap !important;
+            overflow-wrap: break-word !important;
+            font-family: inherit !important;
+        }
+
+        .controls-wrapper {
+            position: absolute;
+            top: -40px;
+            right: 0;
+            padding: 8px;
+            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+            z-index: 10;
+        }
+
+        .select-style {
+            background: rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            color: white;
+            border-radius: 9999px;
+            padding: 4px 12px;
+            outline: none;
+            cursor: pointer;
+        }
+
+        .select-style option {
+            background: #2d3748;
+            color: white;
+            padding: 8px;
+        }
+
+        @keyframes gradientMove {
             0% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
@@ -27,30 +74,67 @@
             padding: 2px;
             transition: all 0.3s ease;
         }
+
+        .glass-effect {
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        }
+
+        .animated-bg {
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradientBG 15s ease infinite;
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
     </style>
 </head>
-<body class="bg-gradient-to-r from-blue-50 to-purple-50 min-h-screen p-8">
-    <div class="max-w-2xl mx-auto bg-white rounded-lg shadow-xl p-8 transform hover:scale-105 transition-transform duration-300">
-        <h1 class="text-4xl font-bold text-center mb-8 text-gray-800 flex items-center justify-center gap-3">
-            <i class="fas fa-microphone text-purple-600 animate-pulse"></i>
-            Text-to-Speech Converter
-        </h1>
-        
-        <div class="space-y-6">
-            <textarea 
-                id="text-input" 
-                placeholder="Enter text here..." 
-                class="w-full h-40 p-4 border border-gray-300 rounded-lg focus:ring-2 focus:ring-purple-500 focus:border-transparent resize-none transition-all duration-300"
-            ></textarea>
+<body class="animated-bg min-h-screen p-4 md:p-8">
+    <div class="max-w-2xl mx-auto glass-effect rounded-2xl overflow-hidden">
+        <!-- Header Section -->
+        <div class="p-6 md:p-8 border-b border-white/10">
+            <h1 class="text-3xl md:text-4xl font-bold text-center flex items-center justify-center gap-3">
+                <i class="fas fa-microphone text-white float-animation"></i>
+                <span class="text-transparent bg-clip-text bg-gradient-to-r from-white to-blue-200">Voice Magic</span>
+            </h1>
+        </div>
 
-            <div id="words-container" class="min-h-[100px] p-4 bg-gray-50 rounded-lg text-lg leading-relaxed hidden"></div>
-            
+        <!-- Main Content Section -->
+        <div class="p-6 md:p-8 space-y-6">
+            <!-- Controls -->
+            <div class="flex flex-wrap gap-3 justify-center mb-4">
+                <select id="voice-select" class="select-style min-w-[150px]">
+                    <!-- Voice options will be added dynamically -->
+                </select>
+                <select id="rate-select" class="select-style min-w-[100px]">
+                    <option value="0.75">Slow</option>
+                    <option value="1" selected>Normal</option>
+                    <option value="1.25">Fast</option>
+                </select>
+            </div>
+
+            <!-- Textarea Container -->
+            <div class="relative">
+                <textarea 
+                    id="text-input" 
+                    placeholder="Type something magical..." 
+                    class="w-full h-40 p-4 bg-white/10 backdrop-blur-md text-white placeholder-gray-300 rounded-xl border border-white/20 focus:ring-2 focus:ring-blue-400 focus:border-transparent resize-none transition-all duration-300 text-lg leading-relaxed"
+                ></textarea>
+            </div>
+
+            <!-- Button -->
             <button 
                 id="speak-btn"
-                class="w-full bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-6 rounded-lg flex items-center justify-center gap-2 transform hover:scale-105 transition-all duration-300 hover:shadow-lg"
+                class="w-full bg-gradient-to-r from-blue-500 to-blue-700 hover:from-blue-600 hover:to-blue-800 text-white font-bold py-4 px-6 rounded-xl flex items-center justify-center gap-3 transform hover:scale-102 transition-all duration-300 hover:shadow-lg text-lg"
             >
-                <i class="fas fa-play"></i>
-                Speak
+                <i class="fas fa-play animate-pulse"></i>
+                <span>Speak Now</span>
             </button>
         </div>
     </div>
